# c-unity

./: CMakeLists.txt  main
src/: CMakeLists.txt  main.c  main.h
sum_module/: CMakeLists.txt  sum_module.h
test/: CMakeLists.txt  main.c
tests/: sum_test.c
